syntax = "proto3";

package greeting;

option java_package = "com.proto.greeting";
option java_multiple_files = true;

message GreetingRequest{
  string first_name = 1;
}

message GreetingResponse{
  string result = 1;
}

service GreetingService {
  rpc great(GreetingRequest) returns (GreetingResponse);
  rpc greatStreamResponse(GreetingRequest) returns (stream GreetingResponse);
  rpc greatStreamRequest(stream GreetingRequest) returns (GreetingResponse);
}